# g.md

./: .gitignore  Cargo.toml  README.md  README_ko.md  build.sh
playground/: CLAUDE.md  run_all_commands.sh
playground/coding/claude/: CLAUDE.md
playground/coding/claude/.claude/: settings.json
playground/docs/: api-guide.md
playground/notes/: meeting-2026-03.md
src/: agent_scan.rs  main.rs  output.rs
src/cmd/: clean.rs  export.rs  find.rs  img.rs  link.rs  meta.rs  mod.rs  prompt_cmd.rs  stat.rs  tag.rs  todo.rs
src/parser/: frontmatter.rs  markdown.rs  mod.rs  walker.rs
tests/: integration_test.rs
tree/: README.md  run_all_commands.sh
tree/docs/: architecture.md  deployment.md
tree/notes/: daily-log.md  ideas.md
tree/projects/: sprint-backlog.md  tech-debt.md
