[package]
name = "gmd"
version = "0.2.0"
edition = "2021"
description = "gmd — Grep Markdown"
license = "MIT"
repository = "https://github.com/leaf-kit/g.md"
keywords = ["markdown", "search", "cli", "grep"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
colored = "2"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1"
regex = "1"
globset = "0.4"
reqwest = { version = "0.12", features = ["blocking"] }
url = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
